Fix the white space in the middle

--- a/style.css
+++ b/style.css
@@ -161,19 +161,16 @@ hr {
 	height: auto;
 }
 
-.researchimg {
-	width: 20%;
-	height: auto;
-}
 
 
 .navbar-brand {
 	padding: 0px;
 }
 
-.container {
-	margin-left: 10%;
-	margin-right: 12%;
+
+
+.rinopart{
+	margin-bottom:100%;
 }
 
 #Aboutlogo {
@@ -183,7 +180,61 @@ hr {
 	color: #0097AA;
 }
 
+#rinologo {
+	font-size: 50px;
+	margin-top: 0px;
+	margin-left: 25%;
+	color: #0097AA;
+}
+
+#gorilla1 {
+	font-size: 50px;
+	margin-top: 0px;
+	margin-left: 25%;
+	color: #0097AA;
+
+}
+
+#leopardlogo{
+	font-size: 50px;
+	display:inline-block;
+	margin-top: auto;
+	margin-left: auto;
+	color: #0097AA;
+}
+
+#leopardpart {
+	font-size: 50px;
+	margin-top: auto;
+	margin-left: auto;
+	color: #0097AA;
+}
+
 #Aboutustext {
+	font-size: 20px;
+	padding: 0px;
+	margin-left: 13px;
+	text-align: justify;
+	font-family: 'Open Sans' sans-serif;
+}
+#rinotext{
+font-size: 20px;
+	padding: 0px;
+	margin-left: 13px;
+	text-align: justify;
+	font-family: 'Open Sans' sans-serif;
+
+}
+
+#gorillatext{
+	font-size: 20px;
+	padding: 0px;
+	margin-left: 13px;
+	text-align: justify;
+	font-family: 'Open Sans' sans-serif;
+}
+
+#leopardtext{
 	font-size: 20px;
 	padding: 0px;
 	margin-left: 13px;
@@ -200,6 +251,34 @@ hr {
 #TeamIMG {
 	float: right;
 	margin-bottom: 25px;
+}
+
+#blackrinopic {
+	float: left;
+	width:500px;
+	margin-left:auto
+   margin-right:auto
+	display:block
+}
+
+#leopardpic{
+	float: left;
+	display:block
+   display:block
+margin-left:auto
+margin-right:auto
+width:350px;
+
+	
+}
+
+#gorillapic{
+	float: left;
+	width:400px;
+	margin-left:auto
+   margin-right:auto
+	display:block
+}
 }
 
 #OURT {
